--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -2,8 +2,8 @@
   "hosting": {
     "amplifyhosting": {
       "service": "amplifyhosting",
-      "providerPlugin": "awscloudformation",
-      "type": "manual"
+      "type": "cicd",
+      "lastPushTimeStamp": "2022-08-06T10:14:15.129Z"
     }
   },
   "function": {
